Make modals able to fit into the window at any size

--- a/src/app/node/modal-exportnodes.html
+++ b/src/app/node/modal-exportnodes.html
@@ -1,14 +1,14 @@
 <div id="addnode-modal" class="modal wide">
   <div class='modal-overlay' ng-click='close("Cancel")'></div>
   <div class="modal-dialog">
-    <div class="modal-dialog-content export-hierarchy">
+    <div class="modal-dialog-content">
       <a class="button modal-close" ng-click="close('Cancel')" data-dismiss="modal" aria-hidden="true" href="#">&times;</a>
 
       <div class="modal-header">
         <h1 class="modal-title">Export Nodes</h1>
       </div>
 
-      <div class="modal-body export-hierarchy-display">
+      <div class="modal-body">
         <ul>
           <li ng-repeat="(dir, categories) in exportHierarchy" class="export-selector-entry">
             <a href="#" ng-click="toggleExportDir(dir)" ng-class="getDisplayStyleDir(dir)">
@@ -26,13 +26,11 @@
           </li>
         </ul>
       </div>
-      </div>
+    </div>
 
-      <div class="modal-footer">
-        <a href="#" ng-click="close('No')" class="button secondary" data-dismiss="modal">Cancel</a>
-        <a href="#" ng-click="exportNodes(); close('Yes')" class="button" data-dismiss="modal">Export</a>
-      </div>
-
+    <div class="modal-footer">
+      <a href="#" ng-click="close('No')" class="button secondary" data-dismiss="modal">Cancel</a>
+      <a href="#" ng-click="exportNodes(); close('Yes')" class="button" data-dismiss="modal">Export</a>
     </div>
   </div>
 </div>
