Unregistered node status; make incomplete trees loadable * Nodes in a tree without a corresponding definition known by the editor are marked as "unregistered." Unregistered nodes cannot have their properties edited and are tinted red. * Trees with unregistered nodes ("incomplete") can now be loaded, with warnings displayed for each node marked as "unregistered"

--- a/src/app/property/property.html
+++ b/src/app/property/property.html
@@ -1,11 +1,18 @@
 <div id="property-panel" class="property-panel panel" scrollable>
 
-  <div ng-show="block === null">
+  <div ng-show="screen === SCRN_UNSELECTED">
     <p style="text-align:center">Select a <strong>single</strong> block to change its properties.</p>
     <p style="text-align:center"><em>NOTE: The root node represents a tree. Therefore, changes applied to this node will persist on the tree object.</em></p>
   </div>
 
-  <div ng-hide="block === null">
+  <div ng-show="screen === SCRN_UNREGISTERED">
+    <p style="text-align:center">This node has no corresponding definition in the editor.</p>
+    <p style="text-align:center">To define it, import it using the 'Import Nodes' button under 'File' or add a node definition for it.</p>
+    <p style="text-align:center">Modules can be defined by opening them in the editor.</p>
+    <p style="text-align:center"><em>NOTE: The root node represents a tree. Therefore, changes applied to this node will persist on the tree object.</em></p>
+  </div>
+
+  <div ng-show="screen === SCRN_SELECTED">
     <form>
       <div class="row">
         <label>Name</label>
