Code refactoring; undo stack updates * addNode --> makeAndAddNode * Break up makeAndAddNode into makeNode and addNode * addBlock --> makeAndAddBlock * registerBlock --> addBlock * addConnection --> makeAndAddConnection * registerConnection --> addConnection * Some code refactoring to reduce code duplication * AddNode and RemoveNode commands * Removing a node definition now marks all associated tree nodes as unregistered * Adding a node definition marks all associated tree nodes as registered * Undo and redo key binds * Undo / redo modifies the undo stack associated with the widget that is focused at the time of the undoing / redoing (WIP; undoing while focused on the "properties" panel will cause an error) * Make unfocused tint more noticeable

--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -112,7 +112,7 @@ button.alert:hover, .button.alert:hover {
   width: 100%;
   height: 100%;
   background-color:#000000;
-  opacity: 0.1;  /* Active by default. */
+  opacity: 0.2;  /* Active by default. */
   pointer-events: none;
 }
 
@@ -254,7 +254,7 @@ form .row input, form .row textarea, form .row select {
   position: absolute;
   z-index: 50;
   top: 0px;
-  background-color: #f4f4f4;
+  background-color: #ececec;
   border: 1px solid #aaaaaa;
   width: 250px;
   height: 100%;
