Bug fixes and tweaks; ImportNodes, EditNode, and EditBlock commands * Better handling of nodes with no save location (the "undefined" bin now displays as "[No Saved Location]", and nodes are properly put into that bin) * Save locations are no longer forced to uppercase in the displays * Fix several bugs related to the node editing modal and to the property panel * EditNode, EditBlock, and ImportNodes commands

--- a/src/app/node/node.html
+++ b/src/app/node/node.html
@@ -1,7 +1,7 @@
 <div class="node-panel panel" scrollable>
   <ul class="item-list2">
     <li ng-repeat="(dirName, nodesInDir) in nodes">
-      <a class="header" href="#">{{dirName}}</a>
+      <a class="header" href="#">{{dirName === 'undefined' ? '[No Save Location]' : dirName}}</a>
       <ul class="item-list">
         <li>
           <a class="header" href="#">Composite</a>
