Rework project creating process; project-related bug fixes * Make "New Project" button show a modal * The modal contains an interface to specify the place in which to save the project as well as the directories from which the project should import the nodes * Fix "Export Nodes" causing an error if no project is loaded * Fix "Import Nodes" causing an error if no project is loaded

--- a/src/app/node/modal-exportnodes.html
+++ b/src/app/node/modal-exportnodes.html
@@ -1,4 +1,4 @@
-<div id="addnode-modal" class="modal wide">
+<div id="exportnodes-modal" class="modal wide">
   <div class='modal-overlay' ng-click='close("Cancel")'></div>
   <div class="modal-dialog">
     <div class="modal-dialog-content">
