Optimizations, tweaks and bug fixes * Make loading trees faster * Optimize some commands * Correct the path to the closehand cursor in editor.css * Correct some colors for buttons * Change "Edit" to an X in tree panel (for removing the tree from the editor) * Make all file dialogs block the main window until they are closed * Add Organize command * Opening or creating a new project doesn't save the previous one. * Fix the "undefined" save location showing up in the Export Nodes window (again!) * Fix canceling a save operation causing an error. * Fix "Save As" clearing the save location of the current tree (it shouldn't do this and should instead tell saveTree directly not to use the current save path). * Fix some issues related to the switch from iterating over this.blocks to tree.blocks. * Fix a bug where connections aren't pasted properly. * Fix cutting being registered as an action when no blocks have been removed. * Fix deleting being registered as an action when no blocks have been removed. * Fix removing connections being registered as an action when no connections will be removed. * Fix the redo variant of AddConnection causing the connection being added to be in a limbo state (both connected and not connected) during a very specific edge case. * Fix a similar issue with MoveConnection. * Fix an internal issue relating to tracking the block that was disconnected when the user drags a connection from its ending block. This has led to all kinds of strange issues occurring. * Fix another issue related to moving a connection to the same inBlock as before.

--- a/src/app/tree/tree.html
+++ b/src/app/tree/tree.html
@@ -8,7 +8,7 @@
          onmouseover="this.lastElementChild.style.display='inline-block';"
          onmouseout="this.lastElementChild.style.display='none';">
         {{tree.name}}
-        <button href="#" class="edit right" ng-show="canEditTree();" ng-click="showEditTreeModal(tree.id)" style="display: none;">Edit</button>
+        <button href="#" title="Remove Tree From Editor" class="edit right" ng-show="canEditTree();" ng-click="showEditTreeModal(tree.id)" style="display: none;">&times;</button>
       </a>
     </li>
   </ul>
