Reject node type conflicts; "invalid" blocks * Make the editor reject attempts to add a node definition if its type does not match the type of corresponding blocks that are loaded into the editor (a "type conflict") * Simplify code to account for the change in handling type conflicts for nodes * Add basic functionality for handling "invalid" blocks, or blocks with type conflicts: Invalid blocks have a red X over them, cannot be edited, and result in a warning if the user attempts to save trees containing them.

--- a/src/app/node/modal-addnode.html
+++ b/src/app/node/modal-addnode.html
@@ -71,7 +71,7 @@
 
     <div class="modal-footer">
       <a href="#" ng-click="close('No')" class="button secondary" data-dismiss="modal">Cancel</a>
-      <a href="#" ng-click="addNode(); close('Yes')" class="button" data-dismiss="modal">Add</a>
+      <a href="#" ng-click="addNode()" class="button" data-dismiss="modal">Add</a>
     </div>
   </div>
 </div>
