Undo history updates; tree save status; auto-import updates * Make it possible to add and remove directories in the menu to/from the project's auto-importing system * Add save status to UndoStack * Mark trees that are unsaved with a red asterisk * Warn the user when they are trying to close a tree with unsaved progress * Make tree undo histories part of the trees themselves * Make EditBlock be triggered when the user clicks out of a field instead of on every keystroke * Update internal language to reflect that the "edit" button is the "remove" button for trees. * Rename "item-list2" class to "directory-list" * Minor updates to updateNodes code * Make nodes of all types (not just actions) be added to the export hierarchy

--- a/src/app/filename/filename.html
+++ b/src/app/filename/filename.html
@@ -1,4 +1,5 @@
 <div class="filename-display" ng-controller="FilenameController">
-  <div class="treename-display">{{filename}}</div>
+  <div class="save-status-display" ng-hide="isSaved">*</div>
+  <div class="treename-display">{{treeName}}</div>
   <div ng-show="path" class="path-display">{{path}}</div>
 </div>
