New node shortcuts; save location input rework; bug fixes * Add buttons to the right of directory names, node types, and node categories to autofill some node attributes when making a new node definition. * Rework the "Save Location" input field in the "Add Custom Node" and "Edit Custom Node" modals to be more intuitive (being able to select an existing save location, using a new one, or using no save location) * Fix moving a node from [No Save Location] to an existing save location resulting in the node appearing in two places at once. * Fix "Import Nodes" causing an error when no project is loaded * Fix a styling issue with the file input directive when the `abbreviated-dir` class is active (line break occurs at certain lengths)

--- a/src/app/node/modal-addnode.html
+++ b/src/app/node/modal-addnode.html
@@ -12,8 +12,8 @@
         <form>
           <div class="row">
             <label>Type</label>
-            <select id="type" ng-change="changeType()" ng-model="nodeType" type="text" placeholder="title">
-              <option ng-repeat="type in types"value="{{type}}">{{type}}</option>
+            <select id="type" ng-change="changeType()" ng-model="nodeTypeThrowaway">
+              <option ng-repeat="type in types" value="{{type}}" ng-selected="type == inputNodeType">{{type}}</option>
             </select>
           </div>
 
@@ -51,14 +51,20 @@
             </table>
           </div>
 
-          <div class="row">
+          <div class="row" ng-show="projectLoaded">
             <label>Save Location</label>
-            <input id="save-location" type="text" placeholder="save location"/>
+            <select id="save-location-mode" ng-model="selectedDirMode">
+              <option ng-repeat="(mode, text) in dirModeDisplayText" value="{{mode}}" ng-selected="mode == defaultDirMode">{{text}}</option>
+            </select>
+            <select id="save-location-preexisting" ng-show="selectedDirMode == 'existing'">
+              <option ng-repeat="dir in directories" value="{{dir}}" ng-selected="dir == originDirectory">{{dir}}</option>
+            </select>
+            <b3-file-input type="folder" id="save-location-new" ng-show="selectedDirMode == 'new'" class="abbreviated-dir"></b3-file-input>
           </div>
 
           <div class="row" id="addnode-category" style="display: none;">
             <label>Category</label>
-            <input id="category" type="text" placeholder="category"/>
+            <input id="category" type="text" placeholder="category" value="{{category}}"/>
           </div>
 
           <div class="row" id="addnode-script" style="display: none;">
