--- a/src/app/node/modal-editnode.html
+++ b/src/app/node/modal-editnode.html
@@ -64,9 +64,15 @@
             </table>
           </div>
 
-          <div class="row">
+          <div class="row" ng-show="projectLoaded">
             <label>Save Location</label>
-            <input id="save-location" type="text" placeholder="save location" value="{{node.prototype.originDirectory}}"/>
+            <select id="save-location-mode" ng-model="selectedDirMode">
+              <option ng-repeat="(mode, text) in dirModeDisplayText" value="{{mode}}" ng-selected="mode == defaultDirMode">{{text}}</option>
+            </select>
+            <select id="save-location-preexisting" ng-show="selectedDirMode == 'existing'">
+              <option ng-repeat="dir in directories" value="{{dir}}" ng-selected="dir == node.prototype.originDirectory">{{dir}}</option>
+            </select>
+            <b3-file-input type="folder" id="save-location-new" ng-show="selectedDirMode == 'new'" class="abbreviated-dir"></b3-file-input>
           </div>
 
           <div class="row" ng-show="node.prototype.type == 'action'">
