--- a/src/app/node/node.html
+++ b/src/app/node/node.html
@@ -2,12 +2,14 @@
   <ul class="directory-list">
     <li ng-repeat="(dirName, nodesInDir) in nodes">
       <span class="save-marker left" ng-hide="dirIsSaved(dirName)">*</span>
-      <a class="header" ng-class="{'not-in-project': isNotInProject(dirName)}" href="#"
+      <a class="header" href="#"
       onmouseover="this.lastElementChild.style.display='inline-block';"
       onmouseout="this.lastElementChild.style.display='none';">
-        {{dirName == '' ? '[No Save Location]' : dirName}}
+        <span ng-class="{'not-in-project': isNotInProject(dirName)}">
+          {{dirName == '' ? '[No Save Location]' : dirName}}
+        </span>
 
-        <span style="display: none;" class="edit right">
+        <span style="display: none;" class="right">
           <!--Add to Project button-->
           <button 
              href="#"
@@ -26,13 +28,24 @@
              ng-click="removeFromProject(dirName)">
             -
           </button>
+          <button class="new-node success right" ng-click="showAddNodeModal(dirName)" href="#" title="Add Custom Node">
+            N
+          </button>
         </span>
         
       </a>
       <ul class="item-list">
         <li>
           <span class="save-marker left" ng-hide="typeIsSaved(dirName, 'composite')">*</span>
-          <a class="header" href="#">Composite</a>
+          <a class="header" href="#"
+          onmouseover="this.lastElementChild.style.display='inline-block';"
+          onmouseout="this.lastElementChild.style.display='none';">
+            Composite
+            <button class="new-node success right" style="display: none;"
+            ng-click="showAddNodeModal(dirName, 'composite')" href="#" title="Add Custom Node">
+              N
+            </button>
+          </a>
           <ul>
             <li ng-repeat="node in nodesInDir.composite">
               <a id="node-{{node.prototype.name}}" 
@@ -58,7 +71,15 @@
         </li>
         <li>
           <span class="save-marker left" ng-hide="typeIsSaved(dirName, 'decorator')">*</span>
-          <a class="header" href="#">Decorator</a>
+          <a class="header" href="#"
+          onmouseover="this.lastElementChild.style.display='inline-block';"
+          onmouseout="this.lastElementChild.style.display='none';">
+            Decorator
+            <button class="new-node success right" style="display: none;"
+            ng-click="showAddNodeModal(dirName, 'decorator')" href="#" title="Add Custom Node">
+              N
+            </button>
+          </a>
           <ul>
             <li ng-repeat="node in nodesInDir.decorator">
               <a id="node-{{node.prototype.name}}" 
@@ -67,7 +88,10 @@
                  onmouseover="this.lastElementChild.style.display='inline-block';"
                  onmouseout="this.lastElementChild.style.display='none';">
                 {{getTitle(node);}}
-                <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
+                <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);"
+                ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">
+                  Edit
+                </button>
               </a>
             </li>
             <li ng-show="nodesInDir.decorator.length===0">
@@ -77,11 +101,27 @@
         </li>
         <li>
           <span class="save-marker left" ng-hide="typeIsSaved(dirName, 'action')">*</span>
-          <a class="header" href="#">Action</a>
+          <a class="header" href="#"
+          onmouseover="this.lastElementChild.style.display='inline-block';"
+          onmouseout="this.lastElementChild.style.display='none';">
+            Action
+            <button class="new-node success right" style="display: none;" ng-click="showAddNodeModal(dirName, 'action')"
+            href="#" title="Add Custom Node">
+              N
+            </button>
+          </a>
           <ul>
             <li ng-repeat="(category,actions) in nodesInDir.actionCategories">
               <span class="save-marker left" ng-hide="categoryIsSaved(dirName, category, 'action')">*</span>
-              <a class="category" href="#">{{category}}</a>
+              <a class="category" href="#"
+              onmouseover="this.lastElementChild.style.display='inline-block';"
+              onmouseout="this.lastElementChild.style.display='none';">
+                {{category}}
+                <button class="new-node success right" style="display: none;"
+                ng-click="showAddNodeModal(dirName, 'action', category)" href="#" title="Add Custom Node">
+                  N
+                </button>
+              </a>
               <ul>
                 <li ng-repeat="node in actions track by $index">
                   <a id="node-{{node.prototype.name}}" 
@@ -90,7 +130,10 @@
                      onmouseover="this.lastElementChild.style.display='inline-block';"
                      onmouseout="this.lastElementChild.style.display='none';">
                     {{getTitle(node);}}
-                    <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
+                    <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);"
+                    ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">
+                      Edit
+                    </button>
                   </a>
                 </li>
                 <li ng-show="actions.length===0">
@@ -105,7 +148,15 @@
         </li>
         <li>
           <span class="save-marker left" ng-hide="typeIsSaved(dirName, 'module')">*</span>
-          <a class="header" href="#">Module</a>
+          <a class="header" href="#"
+          onmouseover="this.lastElementChild.style.display='inline-block';"
+          onmouseout="this.lastElementChild.style.display='none';">
+            Module
+            <button class="new-node success right" style="display: none;" ng-click="showAddNodeModal(dirName, 'module')"
+            href="#" title="Add Custom Node">
+              N
+            </button>
+          </a>
           <ul>
             <li ng-repeat="node in nodesInDir.module">
               <a id="node-{{node.prototype.name}}" 
@@ -114,7 +165,10 @@
                  onmouseover="this.lastElementChild.style.display='inline-block';"
                  onmouseout="this.lastElementChild.style.display='none';">
                 {{getTitle(node);}}
-                <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
+                <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);"
+                ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">
+                  Edit
+                </button>
               </a>
             </li>
             <li ng-show="nodesInDir.module.length===0">
@@ -126,5 +180,5 @@
     </li>
   </ul>
 
-  <a class="button success" ng-click="showAddNodeModal()" href="#">Add Custom Nodes</a>
+  <a class="button success" ng-click="showAddNodeModal()" href="#">Add Custom Node</a>
 </div>
